2013-05-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am: 

2013-05-09  Holger Seelig  <holger.seelig@yahoo.de>

	* plugin.cpp:
	* Makefile.am:
	* libtitania-mozilla.cproj: 
