@@ -232,7 +232,7 @@ Global
 		{ED29C36E-0A00-4130-A5FF-D27AB9EC27CD} = {0A83A471-2425-4FE8-B816-A75033B4D27C}
 	EndGlobalSection
 	GlobalSection(MonoDevelopProperties) = preSolution
-		StartupItem = Titania\Titania.cproj
+		StartupItem = libtitania-mozilla\libtitania-mozilla.cproj
 		Policies = $0
 		$0.TextStylePolicy = $1
 		$1.inheritsSet = null
