@@ -1,5 +1,11 @@
 2013-05-09  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Surface.cpp:
+	* WindowContext.h:
+	* WindowContext.cpp: 
+
+2013-05-09  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Makefile.am:
 	* Surface.h:
 	* Surface.cpp:
