@@ -1,5 +1,10 @@
 2013-05-09  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* plugin.cpp:
+	* Makefile.am: 
+
+2013-05-09  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Makefile.am: 
 
 2013-05-09  Holger Seelig  <holger.seelig@yahoo.de>
